--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-2 offset-sm-1">
-                    <img src='imgs/portrait.png' class='img-fluid'>
+                    <img src='imgs/chenhao.png' class='img-fluid'>
                 </div>
 
                 <div class="col">
