--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 <h1>Bio</h1>
                 <p>
                   I am currently currently a postdoctoral research fellow, supervised by Prof. Dr. <a href="https://ideas.ethz.ch/hua-wang.html">Hua Wang</a>, at Department of Information Technology and Electrical Engineering (D-ITET) of Swiss Federal Institute of Technology Zürich (ETH Zürich), Zurich, Switzerland. 
-                  From October 2017 to September 2018, he was a Research Assistant with the State Key Laboratory of Millimeter Waves, Department of Electronic Engineering, CityU.
-                  I am a member of Social Media Subcommittee in Electronic Information Committee of IEEE Microwave Theory and Technology Society (MTT-S).
+                  From October 2017 to September 2018, I worked as a Research Assistant at the <a href="https://www.ee.cityu.edu.hk/skltmw/">State Key Laboratory of Terahertz and Millimeter Waves</a> and Department of Electronic Engineering, City University of Hong Kong, Hong Kong, China.
+                  I am a member of <a href="https://mtt.org/adcom-committees/">Social Media Subcommittee in Electronic Information Committee</a> of <a href="https://mtt.org/"IEEE Microwave Theory and Technology Society (MTT-S)</a>.
                    <br><br>
                     My research interests lie at the intersection broadband high-efficiency power amplifiers/transmitters at RF/mm-Wave,
                     MMIC power amplifier design for RF/mm-wave applications, and antenna-in-package (AiP) for phased arrays.
