--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <p>
                   I am currently currently a postdoctoral research fellow, supervised by Prof. Dr. <a href="https://ideas.ethz.ch/hua-wang.html">Hua Wang</a>, at Department of Information Technology and Electrical Engineering (<a href="https://ee.ethz.ch/">D-ITET</a>) of Swiss Federal Institute of Technology Zürich (<a href="https://ethz.ch/en.html">ETH Zürich</a>), Zurich, Switzerland. 
                   From October 2017 to September 2018, I worked as a Research Assistant at the <a href="https://www.ee.cityu.edu.hk/skltmw/">State Key Laboratory of Terahertz and Millimeter Waves</a> and Department of Electronic Engineering, City University of Hong Kong, Hong Kong, China.
-                  I am a member of <a href="https://mtt.org/adcom-committees/">Social Media Subcommittee in Electronic Information Committee</a> of <a href="https://mtt.org/">IEEE Microwave Theory and Technology Society (MTT-S)</a>.
+                  I am a member of Social Media Subcommittee in <a href="https://mtt.org/adcom-committees/">Electronic Information Committee</a> of IEEE Microwave Theory and Technology Society (<a href="https://mtt.org/">MTT-S</a>).
                    <br><br>
                     My research interests lie at the intersection broadband high-efficiency power amplifiers/transmitters at RF/mm-Wave,
                     MMIC power amplifier design for RF/mm-wave applications, and antenna-in-package (AiP) for phased arrays.
