--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
                   From October 2017 to September 2018, I worked as a Research Assistant at the <a href="https://www.ee.cityu.edu.hk/skltmw/">State Key Laboratory of Terahertz and Millimeter Waves</a> and Department of Electronic Engineering, City University of Hong Kong, Hong Kong, China.
                   I am a member of Social Media Subcommittee in <a href="https://mtt.org/adcom-committees/">Electronic Information Committee</a> of IEEE Microwave Theory and Technology Society (<a href="https://mtt.org/">MTT-S</a>).
                    <br><br>
-                    My research interests lie at the intersection broadband high-efficiency power amplifiers/transmitters at RF/mm-Wave,
-                    MMIC power amplifier design for RF/mm-wave applications, and antenna-in-package (AiP) for phased arrays.
-                    I have a great passion on new things and ideas, my goal is to create magic and happiness. Outside my research,
-                    I love photography, badminton, and movie appreciation.
+                    My research interests span innovating integrated circuits and systems to address emerging and high-impact applications in communication and sensing.
+                    - Energy-efficient, high-linearity, and wideband power amplification in III-V and silicon technologies
+                    - AI-assisted reconfiguration and rapid design synthesis of RF/mm-Wave circuits and systems
+                    - Broadband and reconfigurable RF/mm-Wave/THz integrated circuits 
+                    - Antenna-in-package (AiP) for phased arrays
                     <br>
 
                 </p>
